# navettes_maritimes

./: .env  .env.example  .gitignore  AB_TESTING_README.md  AB_TESTING_REPORT.md  AB_TESTING_STRATEGY.md  CLAUDE.md  README.md  REPORT_FINAL.md  analyze_distribution.py  compare_ab.py  compare_final.py  compare_versions.py  docker-compose.orchestration.yml  docker-compose.orchestration_old.yml  docker-compose.vps.yml  features_v2.py  features_v3.py  inspect_openmeteo.py  main.py  promote_model.py  pyproject.toml  structure_projet.txt  train_v3.py
front_app/: app.py
maritime/: Dockerfile  README.md  carte.py  test.py
maritime/.ipynb_checkpoints/: maritime_processing-checkpoint.py
maritime/API_meteo_france/: API_meteoFrance.py  Package_Modèles_de_vague_et_surcote_swagger.json  api_clim_table_parametres_quotidiens.csv  commande_station_mensuelle.json  liste_stations_quotidienne.json  response_1747316360513.xml
maritime/data/: Frioul_if.csv  VP_If_reduit.csv  VP_PointeRouge.csv  VP_estaque.csv  VP_frioul.csv  VP_if.csv  consolidation_maritime_old.xlsx
maritime/img/: trig3.html
maritime/notebooks/: 01_cleaning.ipynb  02_ligne_selector.ipynb  03_processing_v0.ipynb  03_processing_v1.ipynb  04_model_comparison.ipynb  cleanning_old.ipynb
maritime/src/: cleaning_utils.py  features_v1.py  paths.py  preprocessing.py  preprocessing_utils.py  retrain.py  train_annulation.py
maritime/versions_py/: mer.py
navettes/: Dockerfile  main.py
navettes/src/: predict_annulation.py
open-meteo/: .gitignore  Makefile  docker-compose.yml  pyproject.toml
open_meteo/: ORCHESTRATION.md  README.md
predict/: .env.example  README.md  README_OLD.md  docker-compose.yml
v1_baseline/: .env.example  README.md
v2_meteo/: .env.example  Makefile  README.md  docker-compose.yml  main.py
v3_hybride/: README.md
(+119 files in other folders)
