[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "open_meteo-ml"
version = "0.1.0"
description = "Classification ML pour données de météo marine de Marseille"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Bruno Coulet", email = "bruno@example.com"}
]
keywords = ["machine-learning", "weather", "marine", "classification"]

dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "fastparquet>=2024.11.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "plotly>=6.6.0",
    "pytz>=2026.2",
    "astral>=3.2",
    "fastapi>=0.136.1",
    "pydantic>=2.13.4",
    "streamlit>=1.57.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
    "mypy>=1.5.0",
]

ml = [
    "tensorflow>=2.14.0",
    "torch>=2.0.0",
    "xgboost>=2.0.0",
]

jupyter = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

[project.urls]
Homepage = "https://github.com/brunocoulet/open_meteo-ml"
Repository = "https://github.com/brunocoulet/open_meteo-ml.git"
Issues = "https://github.com/brunocoulet/open_meteo-ml/issues"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.uv]
# Pas de configuration spécifique uv ici, utiliser .python-version si nécessaire

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
